[frontend/components] Fix extraneous whitespace above quote content

--- a/Iceshrimp.Frontend/Components/Note/NoteComponent.razor.css
+++ b/Iceshrimp.Frontend/Components/Note/NoteComponent.razor.css
@@ -1,3 +1,7 @@
+.note-wrapper {
+    display: flex;
+}
+
 .note-header {
     display: flex;
     padding-bottom: 0.5em;
